@@ -1,7 +1,7 @@
 # write out our datadir so we can reference it at runtime
-File.open('rbotconfig.rb', "w") {|f|
+File.open("#{config('rbdir')}/rbot/pkgconfig.rb", "w") {|f|
   f.puts "module Irc"
-  f.puts "  module Config"
+  f.puts "  module PKGConfig"
   f.puts "    DATADIR = '#{config('datadir')}/rbot'"
   f.puts "  end"
   f.puts "end"
